k8s-az/03-fastapi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: engr-131-api
spec:
  replicas: 12
  selector:
    matchLabels:
      app: fastapi-app
  template:
    metadata:
      labels:
        app: fastapi-app
      annotations:
        ttl.kubernetes.io/replicaSet: "172800" # Clean up ReplicaSets after 2 days
    spec:
      containers:
        - name: fastapi-container
          image: katomyomachia/engr-131-api:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 512Mi
              cpu: 500m
            limits:
              memory: 1Gi
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  selector:
    app: fastapi-app
  ports:
    - protocol: TCP
      port: 80 # Exposed within the cluster
      targetPort: 8080 # FastAPI listens on this port
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace: fastapi
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: engr-131-api.eastus.cloudapp.azure.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-service
                port:
                  number: 80
  tls:
    - hosts:
        - engr-131-api.eastus.cloudapp.azure.com
      secretName: engr-131-api-azure-tls-secret
